--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,8 +6,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
-    tools:context=".MainActivity" android:id="@+id/content_main">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/app_bar_main"
+    tools:context=".MainActivity"
+    android:id="@+id/content_main">
 
     <!--<ScrollView-->
         <!--android:id="@+id/ScrollView01"-->
@@ -111,6 +113,12 @@
     <!--</ScrollView>-->
 
 
-
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText7"
+        android:text="this is content main"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"  />
 
 </RelativeLayout>
