--- a/app/src/main/res/layout/fragment_user_input.xml
+++ b/app/src/main/res/layout/fragment_user_input.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.harjiwigaasmoko.irabukatoko.UserCredentialInput">
+    tools:context="com.example.harjiwigaasmoko.irabukatoko.fragments.UserCredentialInput">
 
     <!-- TODO: Update blank fragment layout -->
 
