add custom list row view

--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,19 +7,19 @@
     android:padding="10dp">
 
 
-    <EditText
-        android:layout_width="0dp"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="Name"
-        android:ems="10"
-        android:id="@+id/editText8"
-        android:layout_weight="0.03" />
+        android:id="@+id/textView2"
+        android:layout_alignParentLeft="true"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox"
-        android:checked="false" />
+        android:checked="false"
+        android:layout_alignParentRight="true"/>
 
-</LinearLayout>
+</RelativeLayout>
