--- a/app/src/main/res/layout/fragment_userlist_list.xml
+++ b/app/src/main/res/layout/fragment_userlist_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.harjiwigaasmoko.irabukatoko.fragments.UserListFragment">
@@ -10,4 +10,4 @@
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
         android:layout_height="match_parent" android:gravity="center" />
 
-</FrameLayout>
+</RelativeLayout>
