--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,8 +3,8 @@
 
     <group android:checkableBehavior="single">
 
-        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
-            android:title="Home" />
+        <!--<item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"-->
+            <!--android:title="Home" />-->
 
         <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
             android:title="Add Credential" />
